--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "forensic-static",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":  "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-router-dom": "^5.0.0"
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.4.0"
-  },
-  "description": ""
+    "html-webpack-plugin": "^2.29.0",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "webpack": "^3.4.0",
+    "webpack-dev-server": "^2.5.0"
+  }
 }
