--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "forensic-static",
+  "name": "react-help-queue-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":  "webpack-dev-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -19,9 +18,6 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^2.29.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "webpack": "^3.4.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack": "^3.4.0"
   }
 }
