--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "firebase": "^3.0.0",
     "lint-fix": "^0.24.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
