--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@okta/okta-signin-widget": "^2.3.0",
     "bootstrap": "^4.3.1",
     "firebase": "^3.9.0",
     "lint-fix": "^0.24.0",
